# whispering

./: .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  blog-post-github-actions-resource-error.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  popup.svelte  projectplan.md  shortcuts.json  svelte.config.js  tailwind.config.js  test.ts  tsconfig.json  turbo.json
.changeset/: config.json  forty-elephants-notice.md
.claude/: settings.local.json
.claude/agents/: backend-api-architect.md  frontend-ui-specialist.md  html-minimizer.md  query-layer-specialist.md  readme-writer.md
.claude/commands/: jsdoc.md  stage-session.md
.github/: FUNDING.yml
.github/workflows/: add-sponsors-to-readme.yml  changesets.yml  main.yml  publish-tauri-releases.yml  publish.yml  submit-to-web-store.yml  submit.yml  sync-agents-files.yml  update-readme-version.yml
.zed/: settings.json
apps/api/: package.json  wrangler.json  wrangler.jsonc
apps/app/: .gitignore  .prettierignore  .prettierrc  README.md  components.json  eslint.config.js  package.json  postcss.config.js  prettier.config.ts  svelte.config.js  tailwind.config.ts  vite.config.ts
apps/app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/app/src-tauri/capabilities/: base.json  default.json  desktop.json
apps/app/src-tauri/icons/: icon.icns  icon.icns.REMOVED.git-id
apps/app/src-tauri/src/: accessibility.rs  lib.rs  main.rs  recording.rs
apps/app/src-tauri/src/recorder/: commands.rs  error.rs  manager.rs  mod.rs  thread.rs
apps/app/src-tauri/src/transcription/: faster_whisper.rs  mod.rs
apps/auth/: .infisical.json  drizzle.config.ts  package.json  wrangler.jsonc
apps/browser-extension/: package.json
apps/chrome-extension/: .prettierrc.cjs  README.md  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
apps/cli/: README.md  package.json  shadcn-prose-styling.md
apps/desktop/: README.md  package.json  tailwind.config.cjs
apps/example/: package.json
apps/extension/: .eslintrc.json  README.md  app.d.ts  background.ts  components.json  options.svelte  options.tsx  package.json  popup.svelte  popup.tsx  style.css  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json
apps/extension-old/: options.svelte  package.json  popup.svelte  postcss.config.js
apps/sh/: README.md  generate_token.ts  openapi-ts.config.ts  package.json  svelte.config.js  vite.config.ts  wrangler.jsonc
apps/sh-proxy/: README.md  eslint.config.js  package.json  wrangler.jsonc
apps/tab-manager/: package.json  tsconfig.json  wxt.config.ts
apps/web/: package.json  tailwind.config.ts  vite.config.ts
apps/web-desktop/: package.json
apps/web-desktop-app/: package.json  pnpm-lock.yaml  privacy-policy.md  svelte.config.js
apps/whispering/: .infisical.json  README.md  package.json
desktop/: README.md  package.json  pnpm-lock.yaml
desktop/src/: app.html
docs/: README.md  svelte-preloading-pattern.md  why-callbacks-in-mutate.md
docs/2025-07-07 launch/: CONTINUATION-PROMPT.md  README.md  REDDIT-MEDIA-STRATEGY.md
docs/articles/: arktype-string-json-parse.md  blog-post-self-contained-components.md  component-props-as-dependency-injection.md  reverse-proxy-cors-aha-moment.md
docs/blog/: 20250121T101532-picking-the-right-abstraction.md  20250719T220008-service-vs-reactive-state.md  query-select-pattern.md  reactive-state-async-initialization.md
docs/launch/: QUICK-REFERENCE.md
docs/release-notes/: README.md  (+7 more)
functions/: tsconfig.json
launch-2025-07-07/: CONTINUATION-PROMPT.md  LAUNCH-PLAN.md  QUICK-REFERENCE.md
release-notes/: README.md  v7.0.0-detailed.md  v7.0.0.md
scripts/: bump-version.ts
specs/: 20250105T155230 vad-device-validation.md  20250107T160000-createTaggedError-migration.md  20250120T193000-improve-pressed-keys-to-tauri-accelerator.md  20250121T000000 convert-to-modifier-specification.md  20250121T085230 refactor-keyboard-constants.md  20250121T214500 browser-platform-detection.md  20250125T123456-consolidated-settings-migration.md  20250129T183000 constants-reorganization.md  20250624T065427 refactor-error-config.md  20250625T084500-version-management-best-practices.md  20250630T084800 constants-barrel-refactoring.md  20250630T135523 discriminated-union-improvements.md  20250703T000000-epicenter-to-wellcrafted-migration.md  constants-README.md  decouple-recorder-services.md  overhaul-keyboard-shortcuts-ui.md  recording-mode-configuration-system.md  shadcn-svelte-claude-best-practices.md  split-manual-tauri-recording-modes.md
src/: app.d.ts  app.html  background.ts  content.ts  options.svelte  popup.svelte
src-tauri/: Cargo.toml  Entitlements.plist  info.plist  tauri.conf.json
web/: svelte.config.js
(+1512 files in other folders)
