[package]
name = "app"
version = "5.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.80.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = [  "image-png", "tray-icon"] }
enigo = "0.2.1"
tauri-plugin-http = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-shell = "2.2.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0-rc"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys =  "0.1.3"
core-foundation-sys =  "0.8.6"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"



[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
